add place holder support and placeholder style in tiptap editor

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,18 @@
+/* tailwind css support */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* editor required styles */
+
+.tiptap p.is-editor-empty:first-child::before {
+    color: #adb5bd;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+  }
+
+  
